--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,10 @@ a:hover{
     border-color: rgb(12, 113, 162);
     color: white;
 }
+.btn-block {
+    display: block;
+    width: 100%;
+}
 
 
 .card,.card-header,.card-body{
@@ -100,6 +104,7 @@ a:hover{
     color: white;
     border: none;
     border-bottom: 1px solid #36A9E1;
+    border-radius: 0px;
 }
 
 .form-control:focus{
@@ -108,6 +113,7 @@ a:hover{
     border: none;
     border-bottom: 1px solid #36A9E1;
     outline: none;
+    border-radius: 0px;
 }
 
 .form-control::placeholder{
