--- a/public/css/style.css
+++ b/public/css/style.css
@@ -181,6 +181,10 @@ a.btn-primary-outline-active,a.btn-primary-outline-active:hover{
     color: rgba(93, 93, 93, 0.8);
 }
 
+.form_control_bg_dark input[type="text"][disabled] {
+    background-color: rgba(196, 196, 196, 0.4);
+}
+
 input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
@@ -205,7 +209,6 @@ option{
 
 select{
     word-wrap: unset;
-    font-family: 'FontAwesome', 'Second Font name'
 }
 
 .card{
@@ -262,7 +265,7 @@ select{
     left: 1px;
     right: auto; }
 .select2-container--material.select2-container--disabled .select2-selection--single {
-    background-color: #eee;
+    background-color: rgba(255,255,255,0.3);
     cursor: default; }
 .select2-container--material.select2-container--disabled .select2-selection--single .select2-selection__clear {
     display: none; }
@@ -327,7 +330,7 @@ select{
     margin-left: 2px;
     margin-right: auto; }
 .select2-container--material.select2-container--disabled .select2-selection--multiple {
-    background-color: #eee;
+    background-color: rgba(255,255,255,0.3); pointer-events: none;
     cursor: default; }
 .select2-container--material.select2-container--disabled .select2-selection__choice__remove {
     display: none; }
@@ -373,6 +376,7 @@ select{
 .select2-container--material .select2-results__option[role=group] {
     padding: 0; }
 .select2-container--material .select2-results__option[aria-disabled=true] {
+    background-color: rgba(255,255,255,0.3); pointer-events: none;
     color: #999; }
 .select2-container--material .select2-results__option[aria-selected=true] {
     background-color: #ddd; }
